--- a/pages/pricing-all.html
+++ b/pages/pricing-all.html
@@ -727,19 +727,32 @@
 
       function createLinkText(featureString) {
         const linkPatterns = {
-          "Request types": 'href="#docs-request"',
-          "Years of data": 'href="#docs-history"',
-          "latency snapshots": 'href="#docs-latency"',
-          "Trade streams": 'href="#docs-streams"',
-          "Quote streams": 'href="#docs-streams"',
-          "Price streams": 'href="#docs-streams"',
-          "historic symbols": 'href="#docs-symbols"',
-          "Option Chain Snapshots": 'href="#docs-options"',
-          "Option Root Snapshots": 'href="#docs-options"',
-          "Stream every option trade": 'href="#docs-streams"',
-          "Stream every stock trade": 'href="#docs-streams"',
-          "Years of UTP data": 'href="#docs-utp"',
-          "Years of CTA data": 'href="#docs-cta"',
+          "Request types":
+            'href="https://http-docs.thetadata.us/Articles/Getting-Started/Subscriptions.html#options-data"',
+          "Years of data":
+            'href="https://http-docs.thetadata.us/Articles/Getting-Started/Subscriptions.html#options-data"',
+          "latency snapshots":
+            'href="https://http-docs.thetadata.us/Articles/Getting-Started/Subscriptions.html#options-data"',
+          "Trade streams":
+            'href="https://http-docs.thetadata.us/Articles/Getting-Started/Subscriptions.html"',
+          "Quote streams":
+            'href="https://http-docs.thetadata.us/Articles/Getting-Started/Subscriptions.html"',
+          "Price streams":
+            'href="https://http-docs.thetadata.us/Articles/Getting-Started/Subscriptions.html#index-data"',
+          "historic symbols":
+            'href="https://http-docs.thetadata.us/Articles/Getting-Started/Subscriptions.html#index-data"',
+          "Option Chain Snapshots":
+            'href="https://http-docs.thetadata.us/Articles/Getting-Started/Subscriptions.html#options-data"',
+          "Option Root Snapshots":
+            'href="https://http-docs.thetadata.us/Articles/Getting-Started/Subscriptions.html#options-data"',
+          "Stream every option trade":
+            'href="https://http-docs.thetadata.us/Articles/Getting-Started/Subscriptions.html#stock-data"',
+          "Stream every stock trade":
+            'href="https://http-docs.thetadata.us/Articles/Getting-Started/Subscriptions.html#stock-data"',
+          "Years of UTP data":
+            'href="https://http-docs.thetadata.us/Articles/Getting-Started/Subscriptions.html#stock-data"',
+          "Years of CTA data":
+            'href="https://http-docs.thetadata.us/Articles/Getting-Started/Subscriptions.html#stock-data"',
         };
 
         let output = featureString;
