--- a/pages/signup.html
+++ b/pages/signup.html
@@ -89,9 +89,9 @@
           <p>Already have an account? <a href="login.html">Log In</a></p>
         </div>
         <div class="footer-links">
-          <a href="privacy-policy.php">Privacy Policy</a>
-          <a href="terms-and-conditions.php">Terms & Conditions</a>
-          <a href="subscriber-agreement.php">Subscriber Agreement</a>
+          <a href="privacy-policy.html">Privacy Policy</a>
+          <a href="terms-and-conditions.html">Terms & Conditions</a>
+          <a href="subscriber-agreement.html">Subscriber Agreement</a>
         </div>
       </div>
     </div>
