--- a/index.html
+++ b/index.html
@@ -892,28 +892,28 @@
           <div class="col-12 text-center footer-content">
             <div class="social-icons mb-4">
               <a
-                href="#instagram-link"
+                href="https://static.wixstatic.com/media/40898a93cfff4578b1779073137eb1b4.png/v1/fill/w_78,h_78,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/40898a93cfff4578b1779073137eb1b4.png"
                 class="social-link mx-2"
                 aria-label="Instagram"
               >
                 <i class="fa-brands fa-instagram"></i>
               </a>
               <a
-                href="#facebook-link"
+                href="https://static.wixstatic.com/media/aebe5b6fd55f471a936c72ff2c8289d7.png/v1/fill/w_78,h_78,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/aebe5b6fd55f471a936c72ff2c8289d7.png"
                 class="social-link mx-2"
                 aria-label="Facebook"
               >
                 <i class="fa-brands fa-facebook"></i>
               </a>
               <a
-                href="#twitter-link"
+                href="https://static.wixstatic.com/media/aeb686ff41244d85bc1232fcf7325ec0.png/v1/fill/w_78,h_78,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/aeb686ff41244d85bc1232fcf7325ec0.png"
                 class="social-link mx-2"
                 aria-label="Twitter"
               >
                 <i class="fa-brands fa-twitter"></i>
               </a>
               <a
-                href="#linkedin-link"
+                href="https://static.wixstatic.com/media/fcfebdfae12a44f993a94aeed8e2e66b.png/v1/fill/w_78,h_78,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/fcfebdfae12a44f993a94aeed8e2e66b.png"
                 class="social-link mx-2"
                 aria-label="Linkedin"
               >
