--- a/index.html
+++ b/index.html
@@ -892,28 +892,28 @@
           <div class="col-12 text-center footer-content">
             <div class="social-icons mb-4">
               <a
-                href="https://static.wixstatic.com/media/40898a93cfff4578b1779073137eb1b4.png/v1/fill/w_78,h_78,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/40898a93cfff4578b1779073137eb1b4.png"
+                href="https://www.instagram.com/theta.data/"
                 class="social-link mx-2"
                 aria-label="Instagram"
               >
                 <i class="fa-brands fa-instagram"></i>
               </a>
               <a
-                href="https://static.wixstatic.com/media/aebe5b6fd55f471a936c72ff2c8289d7.png/v1/fill/w_78,h_78,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/aebe5b6fd55f471a936c72ff2c8289d7.png"
+                href="https://m.facebook.com/Theta-Data-106395478825243/"
                 class="social-link mx-2"
                 aria-label="Facebook"
               >
                 <i class="fa-brands fa-facebook"></i>
               </a>
               <a
-                href="https://static.wixstatic.com/media/aeb686ff41244d85bc1232fcf7325ec0.png/v1/fill/w_78,h_78,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/aeb686ff41244d85bc1232fcf7325ec0.png"
+                href="https://twitter.com/theta_data"
                 class="social-link mx-2"
                 aria-label="Twitter"
               >
                 <i class="fa-brands fa-twitter"></i>
               </a>
               <a
-                href="https://static.wixstatic.com/media/fcfebdfae12a44f993a94aeed8e2e66b.png/v1/fill/w_78,h_78,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/fcfebdfae12a44f993a94aeed8e2e66b.png"
+                href="https://www.linkedin.com/company/axiomx-theta-data/?viewAsMember=true"
                 class="social-link mx-2"
                 aria-label="Linkedin"
               >
@@ -1011,6 +1011,16 @@
         }
         .social-link {
           font-size: 1.5rem;
+        }
+      }
+
+      @media (max-width: 767.98px) {
+        .feature-cards .row {
+          min-height: 80vh;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
         }
       }
     </style>
