--- a/pages/pricing-all.html
+++ b/pages/pricing-all.html
@@ -8,6 +8,20 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link href="../css/custom-bootstrap.css" rel="stylesheet" />
+    <link href="../css/header.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      crossorigin="anonymous"
+    />
+    <link href="../css/effects.css" rel="stylesheet" />
+    <link href="css/pricing-table.css" rel="stylesheet" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <style>
       /* --- CSS Variables for new primary color --- */
       :root {
@@ -219,7 +233,120 @@
     </style>
   </head>
   <body>
-    <div class="container py-5">
+    <section>
+      <!-- Header -->
+      <div class="header-wrapper">
+        <nav class="navbar navbar-expand-lg navbar-clean">
+          <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+              <img src="../images/Logo.png" alt="ThetaData Logo" height="32" />
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarContent"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarContent">
+              <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link px-3" href="pages/pricing-all.html"
+                    ><i class="fas fa-dollar-sign"></i> Pricing</a
+                  >
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link px-3"
+                    href="#"
+                    id="docsDropdown"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    <i class="fas fa-book"></i> Docs
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="docsDropdown">
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="https://docs.thetadata.us/Articles/Getting-Started/Getting-Started.html"
+                        target="_blank"
+                      >
+                        V3 Docs
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="https://http-docs.thetadata.us/Articles/Getting-Started/Getting-Started.html"
+                        target="_blank"
+                      >
+                        V2 Docs
+                      </a>
+                    </li>
+                    <!-- Add other docs here if needed -->
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link px-3" href="https://discord.thetadata.us/"
+                    ><i class="fab fa-discord"></i> Discord</a
+                  >
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link px-3"
+                    href="#"
+                    id="downloadsDropdown"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    <i class="fas fa-download"></i> Downloads
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="downloadsDropdown">
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="https://download-unstable.thetadata.us/ThetaTerminalv3.jar"
+                        target="_blank"
+                      >
+                        V3 Terminal
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        class="dropdown-item"
+                        href="https://download-stable.thetadata.us/"
+                        target="_blank"
+                      >
+                        V2 Terminal
+                      </a>
+                    </li>
+                    <!-- Add other downloads here if needed -->
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link px-3" href="blog/dist"
+                    ><i class="fas fa-blog"></i> Blog</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link px-3" href="careers.html"
+                    ><i class="fas fa-briefcase"></i> Careers</a
+                  >
+                </li>
+              </ul>
+              <a href="pages/signup.html" class="btn btn-get-started">Signup</a>
+            </div>
+          </div>
+        </nav>
+      </div>
+
+    
+
+    <div class="container py-3">
       <header class="pricing-header mb-5 text-center">
         <h1>Data Subscription Pricing</h1>
         <p>
@@ -403,6 +530,122 @@
       </div>
     </div>
 
+    <!-- Footer (copied from index.html) -->
+    <footer class="site-footer py-5">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 text-center footer-content">
+            <div class="social-icons mb-4">
+              <a
+                href="https://www.instagram.com/theta.data/"
+                aria-label="Instagram"
+                class="social-link"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a
+                href="https://m.facebook.com/Theta-Data-106395478825243/"
+                aria-label="Facebook"
+                class="social-link"
+                ><i class="fab fa-facebook"></i
+              ></a>
+              <a
+                href="https://twitter.com/theta_data"
+                aria-label="Twitter"
+                class="social-link"
+                ><i class="fab fa-twitter"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/company/axiomx-theta-data/?viewAsMember=true"
+                aria-label="Linkedin"
+                class="social-link"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+            </div>
+            <p class="copyright-text mb-1">
+              Axonix LLC Theta Data &copy;2020-<span id="footer-year"></span>
+            </p>
+            <p class="contact-info mb-1"></p>
+            <p class="contact-info mb-4"></p>
+            <div
+              class="utility-links d-flex flex-column align-items-center"
+            ></div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <style>
+      :root {
+        --footer-bg: #f8f8f8;
+        --footer-text: #6c757d;
+        --footer-icon: #868e96;
+      }
+
+      .site-footer {
+        background-color: var(--footer-bg);
+        color: var(--footer-text);
+      }
+
+      .footer-content {
+        max-width: 400px;
+        margin: 0 auto;
+      }
+
+      .social-link {
+        color: var(--footer-icon);
+        font-size: 1.8rem;
+        transition: color 0.3s ease;
+        margin: 0 8px;
+      }
+
+      .social-link:hover {
+        color: #495057;
+      }
+
+      .copyright-text,
+      .contact-info {
+        font-size: 0.9rem;
+        line-height: 1.5;
+      }
+
+      .footer-link {
+        color: var(--footer-text);
+        text-decoration: none;
+        transition: color 0.3s;
+      }
+
+      .footer-link:hover {
+        color: #495057;
+      }
+
+      .footer-link-underline {
+        color: var(--footer-text);
+        font-size: 0.9rem;
+        text-decoration: underline;
+        text-underline-offset: 3px;
+        transition: color 0.3s;
+      }
+
+      .footer-link-underline:hover {
+        color: #495057;
+      }
+
+      @media (max-width: 575.98px) {
+        .site-footer {
+          padding-top: 3rem !important;
+          padding-bottom: 3rem !important;
+        }
+        .social-link {
+          font-size: 1.5rem;
+        }
+      }
+    </style>
+    <script>
+      // set footer year
+      (function () {
+        const el = document.getElementById("footer-year");
+        if (el) el.textContent = new Date().getFullYear();
+      })();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       // --- 1. DATA STRUCTURE ---
