--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@
       <img
         src="./images/image1.png"
         alt="Market Data Graphic"
-        data-aos="zoom-in"
-        data-aos-duration="700"
+        class="no-animation"
       />
       <h1 data-aos="fade-up" data-aos-delay="100">
         Invest In Your Market Data
@@ -921,7 +920,7 @@
               </a>
             </div>
             <p class="copyright-text mb-1">
-              Axonix LLC Theta Data &copy;2020-${new Date().getFullYear()}
+              Axonix LLC Theta Data &copy;2020-<span id="footer-year"></span>
             </p>
             <p class="contact-info mb-1">
               <a href="mailto:support@thetadata.net" class="footer-link"
@@ -992,16 +991,27 @@
         color: #495057;
       }
 
+      .footer-link:hover {
+        color: #495057;
+      }
+
       .footer-link-underline {
         color: var(--footer-text);
         font-size: 0.9rem;
-        text-decoration: underline;
+        text-decoration: none;
         text-underline-offset: 3px;
         transition: color 0.3s;
       }
 
       .footer-link-underline:hover {
         color: #495057;
+        text-decoration: none;
+      }
+
+      /* Ensure no underlines appear on any footer links (strong override) */
+      .site-footer a,
+      .site-footer a * {
+        text-decoration: none !important;
       }
 
       @media (max-width: 575.98px) {
@@ -1026,6 +1036,12 @@
     </style>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      (function () {
+        const el = document.getElementById("footer-year");
+        if (el) el.textContent = new Date().getFullYear();
+      })();
+    </script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init({
