--- a/pages/pricing-all.html
+++ b/pages/pricing-all.html
@@ -238,7 +238,7 @@
       <div class="header-wrapper">
         <nav class="navbar navbar-expand-lg navbar-clean">
           <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
+            <a class="navbar-brand d-flex align-items-center" href="../index.html">
               <img src="../images/Logo.png" alt="ThetaData Logo" height="32" />
             </a>
             <button
@@ -252,7 +252,7 @@
             <div class="collapse navbar-collapse" id="navbarContent">
               <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link px-3" href="pages/pricing-all.html"
+                  <a class="nav-link px-3" href="pricing-all.html"
                     ><i class="fas fa-dollar-sign"></i> Pricing</a
                   >
                 </li>
@@ -338,7 +338,7 @@
                   >
                 </li>
               </ul>
-              <a href="pages/signup.html" class="btn btn-get-started">Signup</a>
+              <a href="signup.html" class="btn btn-get-started">Signup</a>
             </div>
           </div>
         </nav>
@@ -530,7 +530,7 @@
       </div>
     </div>
 
-    <!-- Footer (copied from index.html) -->
+        <!-- Footer -->
     <footer class="site-footer py-5">
       <div class="container">
         <div class="row justify-content-center">
@@ -538,37 +538,56 @@
             <div class="social-icons mb-4">
               <a
                 href="https://www.instagram.com/theta.data/"
+                class="social-link mx-2"
                 aria-label="Instagram"
-                class="social-link"
-                ><i class="fab fa-instagram"></i
-              ></a>
+              >
+                <i class="fa-brands fa-instagram"></i>
+              </a>
               <a
                 href="https://m.facebook.com/Theta-Data-106395478825243/"
+                class="social-link mx-2"
                 aria-label="Facebook"
-                class="social-link"
-                ><i class="fab fa-facebook"></i
-              ></a>
+              >
+                <i class="fa-brands fa-facebook"></i>
+              </a>
               <a
                 href="https://twitter.com/theta_data"
+                class="social-link mx-2"
                 aria-label="Twitter"
-                class="social-link"
-                ><i class="fab fa-twitter"></i
-              ></a>
+              >
+                <i class="fa-brands fa-twitter"></i>
+              </a>
               <a
                 href="https://www.linkedin.com/company/axiomx-theta-data/?viewAsMember=true"
+                class="social-link mx-2"
                 aria-label="Linkedin"
-                class="social-link"
-                ><i class="fab fa-linkedin"></i
-              ></a>
+              >
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
             </div>
             <p class="copyright-text mb-1">
               Axonix LLC Theta Data &copy;2020-<span id="footer-year"></span>
             </p>
-            <p class="contact-info mb-1"></p>
-            <p class="contact-info mb-4"></p>
-            <div
-              class="utility-links d-flex flex-column align-items-center"
-            ></div>
+            <p class="contact-info mb-1">
+              <a href="mailto:support@thetadata.net" class="footer-link">support@thetadata.net</a>
+            </p>
+            <p class="contact-info mb-4">
+              Market Data Emergency (646)-875-8005
+            </p>
+            <div class="utility-links d-flex flex-column align-items-center">
+              <a
+                href="pages/terms-and-conditions.html"
+                class="footer-link-underline mb-1"
+              >
+                Terms & Conditions
+              </a>
+              <a
+                href="pages/privacy-policy.html"
+                class="footer-link-underline mb-1"
+              >
+                Privacy Policy
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -590,11 +609,31 @@
         margin: 0 auto;
       }
 
+      /* Prevent underlines/underscores and remove inline-gap artifacts */
+      .site-footer a,
+      .site-footer a * {
+        text-decoration: none !important;
+      }
+
+      .social-icons {
+        /* keep icons vertically centered and remove any extra line height */
+        display: flex;
+        justify-content: center;
+        gap: 12px;
+        align-items: center;
+        line-height: 1;
+        margin-bottom: 0.5rem;
+      }
+
       .social-link {
         color: var(--footer-icon);
         font-size: 1.8rem;
         transition: color 0.3s ease;
-        margin: 0 8px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        width: 36px;
+        height: 36px;
       }
 
       .social-link:hover {
@@ -636,6 +675,8 @@
         }
         .social-link {
           font-size: 1.5rem;
+          width: 32px;
+          height: 32px;
         }
       }
     </style>
