Indices Static Rendered  & index page's inline css removed

--- a/pages/subscriber-agreement.html
+++ b/pages/subscriber-agreement.html
@@ -9,6 +9,17 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/header.css" />
+    <link href="css/custom-bootstrap.css" rel="stylesheet" />
+    <link href="css/header.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      crossorigin="anonymous"
+    />
+    <link href="css/effects.css" rel="stylesheet" />
+    <link href="css/pricing-table.css" rel="stylesheet" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link href="css/sections.css" rel="stylesheet" />
   </head>
   <body>
     <section>
