--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -5,19 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Privacy Policy | Theta Data</title>
 
-    <!-- Bootstrap CSS -->
+    <!-- CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      crossorigin="anonymous"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <!-- Local CSS (use correct relative paths from pages/ folder) -->
     <link rel="stylesheet" href="../css/custom-bootstrap.css" />
     <link rel="stylesheet" href="../css/header.css" />
-
-    <!-- FontAwesome -->
-    <script
-      src="https://kit.fontawesome.com/a076d05399.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="../css/effects.css" />
+    <link rel="stylesheet" href="../css/pricing-table.css" />
+    <link rel="stylesheet" href="../css/sections.css" />
   </head>
   <body>
     <!-- Header -->
@@ -25,7 +30,7 @@
       <nav class="navbar navbar-expand-lg navbar-clean">
         <div class="container">
           <a class="navbar-brand d-flex align-items-center" href="index.html">
-            <img src="./images/Logo.png" alt="ThetaData Logo" height="32" />
+            <img src="../images/Logo.png" alt="ThetaData Logo" height="32" />
           </a>
           <button
             class="navbar-toggler"
