--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link href="css/pricing-table.css" rel="stylesheet" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link href="css/sections.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Header -->
@@ -386,8 +387,7 @@
     <!-- Stocks Data Section (static markup, replaced inline generator) -->
     <section id="stocks-pricing" class="stocks-data-pricing py-5 bg-light">
       <div
-        class="container options-data-pricing"
-        style="padding-top: 0; border-top: none"
+        class="container options-data-pricing no-padding-top-border"
       >
         <header class="text-center mb-5 stocks-header" data-aos="fade-up">
           <h1 class="display-5 fw-bold">Stocks Data</h1>
@@ -1112,92 +1112,7 @@
         </div>
       </div>
     </footer>
-    <style>
-      :root {
-        --footer-bg: #f8f8f8;
-        --footer-text: #6c757d;
-        --footer-icon: #868e96;
-      }
 
-      .site-footer {
-        background-color: var(--footer-bg);
-        color: var(--footer-text);
-      }
-
-      .footer-content {
-        max-width: 400px;
-        margin: 0 auto;
-      }
-
-      .social-link {
-        color: var(--footer-icon);
-        font-size: 1.8rem;
-        transition: color 0.3s ease;
-      }
-
-      .social-link:hover {
-        color: #495057;
-      }
-
-      .copyright-text,
-      .contact-info {
-        font-size: 0.9rem;
-        line-height: 1.5;
-      }
-
-      .footer-link {
-        color: var(--footer-text);
-        text-decoration: none;
-        transition: color 0.3s;
-      }
-
-      .footer-link:hover {
-        color: #495057;
-      }
-
-      .footer-link:hover {
-        color: #495057;
-      }
-
-      .footer-link-underline {
-        color: var(--footer-text);
-        font-size: 0.9rem;
-        text-decoration: none;
-        text-underline-offset: 3px;
-        transition: color 0.3s;
-      }
-
-      .footer-link-underline:hover {
-        color: #495057;
-        text-decoration: none;
-      }
-
-      /* Ensure no underlines appear on any footer links (strong override) */
-      .site-footer a,
-      .site-footer a * {
-        text-decoration: none !important;
-      }
-
-      @media (max-width: 575.98px) {
-        .site-footer {
-          padding-top: 3rem !important;
-          padding-bottom: 3rem !important;
-        }
-        .social-link {
-          font-size: 1.5rem;
-        }
-      }
-
-      @media (max-width: 767.98px) {
-        .feature-cards .row {
-          min-height: 80vh;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-        }
-      }
-    </style>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
