--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="../css/effects.css" />
     <link rel="stylesheet" href="../css/pricing-table.css" />
     <link rel="stylesheet" href="../css/sections.css" />
+    <link rel="stylesheet" href="../css/privacy-policy.css" />
   </head>
   <body>
     <!-- Header -->
@@ -264,128 +265,12 @@
     </footer>
 
     <!-- FOOTER SCRIPT -->
-    <script>
-      // Social Links
-      const socialLinks = {
-        facebook: "https://www.facebook.com/profile.php?id=100084005288417",
-        twitter: "https://x.com/theta_data",
-        linkedin:
-          "https://www.linkedin.com/company/axiomx-theta-data/?viewAsMember=true",
-      };
+    <script src="../js/privacy-policy.js"></script>
 
-      // Utility Links
-      const utilityLinks = {
-        "Terms & Conditions": "#terms-link",
-        "Privacy Policy": "#privacy-link",
-      };
 
-      // Insert social links
-      const socialContainer = document.getElementById("social-links");
-      for (const [icon, link] of Object.entries(socialLinks)) {
-        const a = document.createElement("a");
-        a.href = link;
-        a.className = "social-link mx-2";
-        a.setAttribute(
-          "aria-label",
-          icon.charAt(0).toUpperCase() + icon.slice(1)
-        );
-        a.innerHTML = `<i class="fa-brands fa-${icon}"></i>`;
-        socialContainer.appendChild(a);
-      }
-
-      // Insert utility links
-      const utilityContainer = document.getElementById("utility-links");
-      for (const [text, link] of Object.entries(utilityLinks)) {
-        const a = document.createElement("a");
-        a.href = link;
-        a.className = "footer-link-underline mb-1";
-        a.textContent = text;
-        utilityContainer.appendChild(a);
-      }
-
-      // Dynamic year
-      const year = new Date().getFullYear();
-      document.getElementById(
-        "copyright"
-      ).innerHTML = `Axonix LLC Theta Data &copy; 2020-${year}`;
-    </script>
-
-    <!-- FOOTER STYLES -->
-    <style>
-      :root {
-        --footer-bg: #f8f8f8;
-        --footer-text: #6c757d;
-        --footer-icon: #868e96;
-      }
-
-      .site-footer {
-        background-color: var(--footer-bg);
-        color: var(--footer-text);
-      }
-
-      .footer-content {
-        max-width: 400px;
-        margin: 0 auto;
-      }
-
-      .social-link {
-        color: var(--footer-icon);
-        font-size: 1.8rem;
-        transition: color 0.3s ease;
-      }
-
-      .social-link:hover {
-        color: #495057;
-      }
-
-      .copyright-text,
-      .contact-info {
-        font-size: 0.9rem;
-        line-height: 1.5;
-      }
-
-      .footer-link {
-        color: var(--footer-text);
-        text-decoration: none;
-        transition: color 0.3s;
-      }
-
-      .footer-link:hover {
-        color: #495057;
-      }
-
-      .footer-link-underline {
-        color: var(--footer-text);
-        font-size: 0.9rem;
-        text-decoration: underline;
-        text-underline-offset: 3px;
-        transition: color 0.3s;
-      }
-
-      .footer-link-underline:hover {
-        color: #495057;
-      }
-
-      @media (max-width: 575.98px) {
-        .site-footer {
-          padding-top: 3rem !important;
-          padding-bottom: 3rem !important;
-        }
-        .social-link {
-          font-size: 1.5rem;
-        }
-      }
-    </style>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- PRIVACY POLICY STYLES -->
-    <style>
-      .policy-container h1,
-      .policy-container h4 {
-        color: #333;
-        font-weight: 600;
-      }
-    </style>
+
   </body>
 </html>
